# Hackathon-two-todo-app

phase-I/specs/1-todo-app/: plan.md  spec.md  tasks.md
phase-I/specs/1-todo-console-app/: spec.md
phase-I/todo-app/: README.md  cli.py  main.py  repository.py  service.py  todo.py
phase-II/: package.json
phase-II/.claude/agents/: api-sentinel.md  auth-integration-specialist.md  (+3 more)
phase-II/backend/: .env  .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt  test_app.py  test_final.py  test_import.py  todo_backend.db
phase-II/backend/src/: __init__.py  main.py
phase-II/backend/src/api/: __init__.py  exceptions.py  handlers.py
phase-II/backend/src/api/v1/: __init__.py  auth.py  dependencies.py  models.py  tasks.py  validators.py
phase-II/backend/src/auth/: exceptions.py  jwt_handler.py  middleware.py  utils.py
phase-II/backend/src/database/: __init__.py  config.py  connection.py
phase-II/backend/src/middleware/: auth_logging_middleware.py  logging_middleware.py  rate_limit_middleware.py
phase-II/backend/src/models/: __init__.py  task.py  user.py
phase-II/backend/src/services/: __init__.py  auth_service.py  task_service.py
phase-II/backend/tests/contract/: __init__.py  test_task_api_contract.py
phase-II/backend/tests/integration/: __init__.py  test_api.py  test_auth_api.py  test_database_transactions.py
phase-II/backend/tests/security/: test_auth_security.py
phase-II/backend/tests/unit/: __init__.py  test_auth.py  test_models.py  test_task_service.py
phase-II/frontend/: .gitignore  package-lock.json  package.json
(+77 files in other folders)
